1999-01-01  Callum McKenzie <callum@physics.otago.ac.nz>

      * gnomine.c (marks_changed): Call gtk_clock_start.
1999-01-02  Callum McKenzie  <callum@physics.otago.ac.nz>

      * minefield.c: Resizing now works properly. All public functions
      check their arguments.
      * minefield.h: Removed the global variable minesize (it was evil).
      * gnomine.c:   More fixes to get resizing working properly.

1999-01-01  Callum McKenzie <callum@physics.otago.ac.nz>
  
        * gnomine.c (marks_changed): Call gtk_clock_start.

1999-01-01  Callum McKenzie <callum@physics.otago.ac.nz>

	* gnomine.c (marks_changed): Call gtk_clock_start.

1998-11-28  Herbert Valerio Riedel  <hvr@hvrlab.ml.org>

	* gnomine.c: added GPOINTER_TO_INT / GINT_TO_POINTER

Mon Nov 23 15:10:07 EST 1998 Gregory McLean <gregm@comstar.net>

	* minefield.c : GTK_BASIC got removed from gtk, ifdef'd this
	one out as I'm not sure what replaces it.

1998-11-22  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnomine.c (main): 'gnome_new_default_client' replaced by
 	'gnome_master_client'.

1998-09-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnomine.c: Added shortcut support.

1998-07-25  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* gnomine.desktop: Added Portuguese translation.

1998-06-24  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomine.c (setup_game): Use new API for GtkSpinButton.

1998-05-29 Kjartan Maraas <kmaraas@fib.hl.no>

	* gnomine.c: Fixed scores getting better as time goes.
		     No more "waiting for a new hiscore" :-)
	
1998-05-24 Kjartan Maraas <kmaraas@fib.hl.no>

	* Makefile.am: New scorefiles gnomine.[Tiny,Medium,Biiiig].scores
	* gnomine.c:   Made scores work in all modes.
	
1998-05-17 Timo Sirainen <a@sicom.fi>

	* minefield.c: Marking two mines fast resulted as doubleclick and
	               didn't work right
	* minefield.c: Changed multi press behaviour so that it always
	               displays what squares are about to be pressed